# batch-max-export

./: README.md  index.html  package-lock.json  package.json
src/: index.css
src-tauri/: Cargo.toml  tauri.conf.json
src/components/: InventoryTable.tsx  ItemDialog.tsx  RationSection.tsx  SummarySection.tsx
src/pages/: Index.tsx
src/types/: inventory.ts  jspdf-autotable.d.ts
src/utils/: exportUtils.ts  fifoCalculations.ts
